force-app/main/default/objects/Quiz_Answer_Option__c/Quiz_Answer_Option__c.object-meta.xml
<CustomObject>
    <description>Represents an answer option for a quiz question</description>
    <label>Quiz Answer Option</label>
    <nameField>
        <displayFormat>OPT-{00000}</displayFormat>
        <label>Option Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Answer Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>