force-app/main/default/objects/Quiz_Answer_Option__c/fields/Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text__c</fullName>
    <description>The text of the answer option</description>
    <inlineHelpText>Enter the answer option text</inlineHelpText>
    <label>Answer Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>