force-app/main/default/objects/Quiz_Answer_Option__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this answer option is active</description>
    <inlineHelpText>Uncheck to hide this answer option</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>