force-app/main/default/objects/Quiz_Answer_Option__c/fields/Is_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is the correct answer</description>
    <inlineHelpText>Check if this is the correct answer for the question</inlineHelpText>
    <label>Is Correct</label>
    <type>Checkbox</type>
</CustomField>