force-app/main/default/objects/Quiz_Answer_Option__c/fields/Quiz_Question__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Question__c</fullName>
    <description>The question this answer option belongs to</description>
    <label>Quiz Question</label>
    <referenceTo>Quiz_Question__c</referenceTo>
    <relationshipLabel>Answer Options</relationshipLabel>
    <relationshipName>Answer_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>